--- a/src/index.html
+++ b/src/index.html
@@ -231,94 +231,110 @@
     <ul class="prices_pack">
 
       <!-- Express -->
-      <li class="prices_pack_block prices_pack_block_1">
-        <p class="prices_pack_block_title prices_pack_block_title_1">Ekspress</p>
-        <p class="prices_pack_block_time">15 min</p>
-        <ul class="prices_pack_block_listin">
-          <li>1 helten</li>
-          <li>3 ballongar</li>
-          <li>Tematisk musikk</li>
-          <li>Danse</li>
-          <li>Bilde med helten</li>
-        </ul>
-        <p class="prices_pack_block_price prices_pack_block_price_1">500 kr</p>
-      </li>
+      <div class="grid-1">
+        <li class="prices_pack_block prices_pack_block_1">
+          <p class="prices_pack_block_title prices_pack_block_title_1">Ekspress</p>
+          <p class="prices_pack_block_time">15 min</p>
+          <ul class="prices_pack_block_listin">
+            <li>1 helten</li>
+            <li>3 ballongar</li>
+            <li>Tematisk musikk</li>
+            <li>Danse</li>
+            <li>Bilde med helten</li>
+          </ul>
+          <p class="prices_pack_block_price prices_pack_block_price_1">500 kr</p>
+        </li>
 
-      <!-- Standart -->
-      <li class="prices_pack_block prices_pack_block_2">
-        <p class="prices_pack_block_title prices_pack_block_title_2">Standart</p>
-        <p class="prices_pack_block_time">1 time/ 10 barn</p>
-        <ul class="prices_pack_block_listin">
-          <li>2 heltar</li>
-          <li>Tematisk musikk</li>
-          <li>Spelar leiker/ stafettar med rekvisitter</li>
-          <li>Pakke opp gaver</li>
-          <li>Discotek med såpeboblergenerator</li>
-          <li>Bilde med heltar</li>
-        </ul>
-        <p class="prices_pack_block_price prices_pack_block_price_2 prices_pack_block_price_2_old">1350 kr</p>
-        <p class="prices_pack_block_price prices_pack_block_price_2">1000 kr</p>
-      </li>
+        <!-- Standart -->
+        <li class="prices_pack_block prices_pack_block_2">
+          <p class="prices_pack_block_title prices_pack_block_title_2">Standart</p>
+          <p class="prices_pack_block_time">1 time/ 10 barn</p>
+          <ul class="prices_pack_block_listin">
+            <li>2 heltar</li>
+            <li>Tematisk musikk</li>
+            <li>Spelar leiker/ stafettar med rekvisitter</li>
+            <li>Pakke opp gaver</li>
+            <li>Discotek med såpeboblergenerator</li>
+            <li>Bilde med heltar</li>
+          </ul>
+          <p class="prices_pack_block_price prices_pack_block_price_2 prices_pack_block_price_2_old">1350 kr</p>
+          <p class="prices_pack_block_price prices_pack_block_price_2">1000 kr</p>
+        </li>
+      </div>
 
       <!-- Super -->
-      <li class="prices_pack_block prices_pack_block_3">
-        <p class="prices_pack_block_title prices_pack_block_title_3">Super</p>
-        <p class="prices_pack_block_time">1 time/ 10 barn</p>
-        <ul class="prices_pack_block_listin">
-          <li>2 heltar</li>
-          <li>Ansiktmåling</li>
-          <li>Tematisk musikk</li>
-          <li>Spelar leiker/ stafettar med rekvisitter</li>
-          <li>Pakke opp gaver</li>
-          <li>Discotek med såpeboblergenerator</li>
-          <li>Ballongfigur for kvar barn</li>
-          <li>Bilde med heltar</li>
-        </ul>
-        <p class="prices_pack_block_price prices_pack_block_price_3 prices_pack_block_price_3_old">2050 kr</p>
-        <p class="prices_pack_block_price prices_pack_block_price_3 ">1500 kr</p>
-      </li>
+      <div class="grid-2">
+        <li class="prices_pack_block prices_pack_block_3">
+          <p class="prices_pack_block_title prices_pack_block_title_3">Super</p>
+          <p class="prices_pack_block_time">1 time/ 10 barn</p>
+          <ul class="prices_pack_block_listin">
+            <li>2 heltar</li>
+            <li>Ansiktmåling</li>
+            <li>Tematisk musikk</li>
+            <li>Spelar leiker/ stafettar med rekvisitter</li>
+            <li>Pakke opp gaver</li>
+            <li>Discotek med såpeboblergenerator</li>
+            <li>Ballongfigur for kvar barn</li>
+            <li>Bilde med heltar</li>
+          </ul>
+          <p class="prices_pack_block_price prices_pack_block_price_3 prices_pack_block_price_3_old">2050 kr</p>
+          <p class="prices_pack_block_price prices_pack_block_price_3 ">1500 kr</p>
+        </li>
 
-      <!-- VIP -->
-      <li class="prices_pack_block prices_pack_block_4">
-        <p class="prices_pack_block_title prices_pack_block_title_4">VIP</p>
-        <p class="prices_pack_block_time">2 timar/ 10 barn</p>
-        <ul class="prices_pack_block_listin">
-          <li>Frisyre og ansiktsmåling til bursdagsgutten</li>
-          <li>2 heltar</li>
-          <li>Ansiktmåling</li>
-          <li>Glittertatovering</li>
-          <li>Kurs sjokoladegodteri</li>
-          <li>Tematisk musikk</li>
-          <li>Spelar leiker/ stafettar/ kvestar med rekvisitter</li>
-          <li>Discotek med såpeboblergenerator</li>
-          <li>Pinjata</li>
-          <li>Bilder med heltar</li>
-          <li>Fotosoner</li>
-          <li>Fotograf</li>
-        </ul>
-        <p class="prices_pack_block_price prices_pack_block_price_4 prices_pack_block_price_4_old">4800 kr</p>
-        <p class="prices_pack_block_price prices_pack_block_price_4">3000 kr</p>
-      </li>
+        <!-- VIP -->
+        <li class="prices_pack_block prices_pack_block_4">
+          <p class="prices_pack_block_title prices_pack_block_title_4">VIP</p>
+          <p class="prices_pack_block_time">2 timar/ 10 barn</p>
+          <ul class="prices_pack_block_listin">
+            <li>Frisyre og ansiktsmåling til bursdagsgutten</li>
+            <li>2 heltar</li>
+            <li>Ansiktmåling</li>
+            <li>Glittertatovering</li>
+            <li>Kurs sjokoladegodteri</li>
+            <li>Tematisk musikk</li>
+            <li>Spelar leiker/ stafettar/ kvestar med rekvisitter</li>
+            <li>Discotek med såpeboblergenerator</li>
+            <li>Pinjata</li>
+            <li>Bilder med heltar</li>
+            <li>Fotosoner</li>
+            <li>Fotograf</li>
+          </ul>
+          <p class="prices_pack_block_price prices_pack_block_price_4 prices_pack_block_price_4_old">4800 kr</p>
+          <p class="prices_pack_block_price prices_pack_block_price_4">3000 kr</p>
+        </li>
+      </div>
     </ul>
 
-    <p>Avreise - frå 200 kr</p>
-    <p>Helten kan gi kaker til barne</p>
+    <p class="prices_avreise">Avreise - frå 200 kr</p>
+    <p class="prices_kaker">Helten kan gi kaker til barne</p>
 
     <!-- Extra servises -->
-    <div>
-      <p>Tilleggstjeneste til Tjenestepakker - betales separat:</p>
-      <ul>
-        <li>extra barn - 50 kr</li>
-        <li>ein animatør - 400 kr</li>
-        <li>glittertatooeringer - 500 kr</li>
-        <li>ansiktmåling - 500 kr</li>
-        <li>fotograf - 500 kr</li>
-        <li>pinjata - 150 kr</li>
-        <li>fotosoner - 200 kr</li>
-        <li>såpeboblergenerator - 200 kr</li>
-        <li>ballonger frå - 250 kr</li>
-        <li>godteri for pinjata frå - 250 kr</li>
-        <li>kurs for barna frå - 500 kr</li>
+    <div class="prices_extra">
+      <p class="prices_extra_title">Tilleggstjeneste til Tjenestepakker - betales separat:</p>
+      <ul class="prices_extra_list">
+        <div>
+          <li class="prices_extra_list_block">extra barn - <span class="prices_extra_list_num">50 kr</span></li>
+          <li class="prices_extra_list_block">ein animatør - <span
+              class="prices_extra_list_num prices_extra_list_num_2">400 kr</span></li>
+          <li class="prices_extra_list_block">glittertatooeringer - <span class="prices_extra_list_num">500 kr</span>
+          </li>
+          <li class="prices_extra_list_block">ansiktmåling - <span
+              class="prices_extra_list_num prices_extra_list_num_2">500 kr</span></li>
+          <li class="prices_extra_list_block">fotograf - <span class="prices_extra_list_num">500 kr</span></li>
+          <li class="prices_extra_list_block">pinjata - <span class="prices_extra_list_num prices_extra_list_num_2">150
+              kr</span></li>
+        </div>
+        <div>
+
+          <li class="prices_extra_list_block">fotosoner - <span class="prices_extra_list_num">200 kr</span></li>
+          <li class="prices_extra_list_block">såpeboblergenerator - <span
+              class="prices_extra_list_num prices_extra_list_num_2">200 kr</span></li>
+          <li class="prices_extra_list_block">ballonger - <span class="prices_extra_list_num">frå 250 kr</span></li>
+          <li class="prices_extra_list_block">godteri for pinjata - <span
+              class="prices_extra_list_num prices_extra_list_num_2">frå 250 kr</span></li>
+          <li class="prices_extra_list_block">kurs for barna - <span class="prices_extra_list_num">frå 500 kr</span>
+          </li>
+        </div>
       </ul>
     </div>
   </div>
