--- a/src/index.html
+++ b/src/index.html
@@ -93,13 +93,13 @@
       </div>
 
       <div class="heroes_grid_block heroes_grid_block_2">
-        <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
+        <img class="heroes_grid_block_img heroes_grid_block_img_2" src="./i/img/patrol_transp.png" alt="ex">
         <h3 class="heroes_grid_block_heroes">PAV patrul</h3>
         <a class="heroes_grid_block_btn" href="#">Mer informasjon</a>
       </div>
 
       <div class="heroes_grid_block heroes_grid_block_3">
-        <img class="heroes_grid_block_img" src="./i/img/ex.png" alt="ex">
+        <img class="heroes_grid_block_img heroes_grid_block_img_3" src="./i/img/pirat_transp.png" alt="ex">
         <h3 class="heroes_grid_block_heroes">Pirater</h3>
         <a class="heroes_grid_block_btn" href="#">Mer informasjon</a>
       </div>
