--- a/src/index.html
+++ b/src/index.html
@@ -187,6 +187,9 @@
     </ul>
 
   </div>
+  <!-- --WAVE -->
+
+
 
   <!-- --SHOW -->
   <div class="bg">
@@ -340,7 +343,24 @@
   </div>
 
 
-
+  <!-- --WHERE -->
+  <div class="where">
+    <h2 class="where_title">Kvar vi arbeider:</h2>
+    <ul class="where_list">
+      <li class="where_list_item"><img class="where_list_item_img" src="i/img/001-house.png" alt="einebustad">I ein
+        einebustad</li>
+      <li class="where_list_item"><img class="where_list_item_img" src="i/img/002-apartments.png" alt="leilegheit">I
+        ei
+        leilegheit</li>
+      <li class="where_list_item"><img class="where_list_item_img" src="i/img/003-park.png" alt="park">I ein park</li>
+      <li class="where_list_item"><img class="where_list_item_img" src="i/img/004-game.png" alt="barnehage">I ein
+        barnehage/skule</li>
+      <li class="where_list_item"><img class="where_list_item_img" src="i/img/005-playground.png"
+          alt="aktivitetssenter">I eit barne- eller aktivitetssenter</li>
+      <li class="where_list_item"><img class="where_list_item_img" src="i/img/006-restaurant.png" alt="restaurant">På
+        ein kafé/restaurant</li>
+    </ul>
+  </div>
 
   <!-- 
   <header class="header-container" id="header-container">
