--- a/src/index.html
+++ b/src/index.html
@@ -362,6 +362,26 @@
     </ul>
   </div>
 
+
+  <!-- --WHY -->
+  <div class="why">
+    <h2 class="why_title">Kvifor du bør kontakte oss:</h2>
+    <ul class="why_list">
+      <li class="why_list_item why_list_item_1"><img class="why_list_item_img" src="i/img/why-payment.png"
+          alt="payment">Flotte festar for alle
+        budsjett</li>
+      <li class="why_list_item why_list_item_2"><img class="why_list_item_img" src="i/img/why-iron.png" alt="iron">Alle
+        kostyme blir varma opp
+      </li>
+      <li class="why_list_item why_list_item_3"><img class="why_list_item_img" src="i/img/why-calendar.png"
+          alt="calendar">Vi har jobba sidan 2023
+      </li>
+      <li class="why_list_item why_list_item_4"><img class="why_list_item_img" src="i/img/why-cake.png" alt="cake">Vi
+        har halde meir enn 30 festar
+      </li>
+    </ul>
+  </div>
+
   <!-- 
   <header class="header-container" id="header-container">
     <section class="header">
