--- a/src/index.html
+++ b/src/index.html
@@ -192,8 +192,12 @@
 
 
   <!-- --SHOW -->
-  <div class="bg">
-    <div class="show">
+  <div class="show">
+    <h2 class="show_title">Såpebobleshow</h2>
+    <h3 class="show_title_sec">for ditt arrangement</h3>
+    <p class="show_main-text"> Vi hjelper deg med å velge det beste showet til festen din!</p>
+    <p class="show_vent-snart">Vent snart!</p>
+    <!-- <div class="show">
       <h2 class="show_title">
         Show for ditt arrangement
       </h2>
@@ -206,27 +210,10 @@
           <img class="show_list_block_img" src="i/img/img-more-14.jpg" alt="såpebobleshow">
         </li>
       </ul>
-    </div>
+    </div> -->
   </div>
 
-  <!-- --KONTAKT -->
-  <div class="kontakt">
-    <div class="kontakt_block">
-      <h2 class="kontakt_block_h1">Vil du ikke bruke mye tid på å finne ut av det?</h2>
-      <p class="kontakt_block_txt">Vi vil utvikle det perfekte alternativer for festen din!</p>
-      <a href="tel:+4796752008" class="kontakt_block_number">
-        <h2 class="second-h1">Vil du ikke bruke mye tid på å finne ut av det?</h2>
-        <p class="second-txt">Vi vil utvikle det perfekte alternativer for festen din!</p>+47 967 52 008
-        <p class="kontakt_block_number_gratis">Gratis konsultasjon!</p>
-      </a>
 
-    </div>
-    <div class="kontakt_btn">
-      <button class="kontakt_btn_btn1 ringer">
-        Ringer</button>
-      <button class="kontakt_btn_btn2 messenger ">Messenger</button>
-    </div>
-  </div>
 
   <!-- --PRICES -->
   <div class="prices">
@@ -342,6 +329,24 @@
     </div>
   </div>
 
+  <!-- --KONTAKT -->
+  <div class="kontakt">
+    <div class="kontakt_block">
+      <h2 class="kontakt_block_h1">Vil du ikke bruke mye tid på å finne ut av det?</h2>
+      <p class="kontakt_block_txt">Vi vil utvikle det perfekte alternativer for festen din!</p>
+      <a href="tel:+4796752008" class="kontakt_block_number">
+        <h2 class="second-h1">Vil du ikke bruke mye tid på å finne ut av det?</h2>
+        <p class="second-txt">Vi vil utvikle det perfekte alternativer for festen din!</p>+47 967 52 008
+        <p class="kontakt_block_number_gratis">Gratis konsultasjon!</p>
+      </a>
+
+    </div>
+    <div class="kontakt_btn">
+      <button class="kontakt_btn_btn1 ringer">
+        Ringer</button>
+      <button class="kontakt_btn_btn2 messenger ">Messenger</button>
+    </div>
+  </div>
 
   <!-- --WHERE -->
   <div class="where">
