--- a/src/index.html
+++ b/src/index.html
@@ -187,9 +187,6 @@
     </ul>
 
   </div>
-  <!-- --WAVE -->
-
-
 
   <!-- --SHOW -->
   <div class="show">
@@ -197,20 +194,7 @@
     <h3 class="show_title_sec">for ditt arrangement</h3>
     <p class="show_main-text"> Vi hjelper deg med å velge det beste showet til festen din!</p>
     <p class="show_vent-snart">Vent snart!</p>
-    <!-- <div class="show">
-      <h2 class="show_title">
-        Show for ditt arrangement
-      </h2>
-      <p class="show_txt">Vi hjelper deg med å velge det beste showet til festen din &#9733;</p>
-      <ul class="show_list">
-        <li class="show_list_block">
-          <p class="show_list_block_h">
-            Såpebobleshow
-          </p>
-          <img class="show_list_block_img" src="i/img/img-more-14.jpg" alt="såpebobleshow">
-        </li>
-      </ul>
-    </div> -->
+
   </div>
 
 
@@ -349,22 +333,26 @@
   </div>
 
   <!-- --WHERE -->
-  <div class="where">
-    <h2 class="where_title">Kvar vi arbeider:</h2>
-    <ul class="where_list">
-      <li class="where_list_item"><img class="where_list_item_img" src="i/img/001-house.png" alt="einebustad">I ein
-        einebustad</li>
-      <li class="where_list_item"><img class="where_list_item_img" src="i/img/002-apartments.png" alt="leilegheit">I
-        ei
-        leilegheit</li>
-      <li class="where_list_item"><img class="where_list_item_img" src="i/img/003-park.png" alt="park">I ein park</li>
-      <li class="where_list_item"><img class="where_list_item_img" src="i/img/004-game.png" alt="barnehage">I ein
-        barnehage/skule</li>
-      <li class="where_list_item"><img class="where_list_item_img" src="i/img/005-playground.png"
-          alt="aktivitetssenter">I eit barne- eller aktivitetssenter</li>
-      <li class="where_list_item"><img class="where_list_item_img" src="i/img/006-restaurant.png" alt="restaurant">På
-        ein kafé/restaurant</li>
-    </ul>
+  <div class="where-block">
+    <div class="where">
+      <h2 class="where_title">Kvar vi arbeider:</h2>
+      <ul class="where_list">
+        <li class="where_list_item"><img class="where_list_item_img" src="i/img/001-house.png" alt="einebustad">I ein
+          einebustad</li>
+        <li class="where_list_item"><img class="where_list_item_img" src="i/img/002-apartments.png" alt="leilegheit">I
+          ei
+          leilegheit</li>
+        <li class="where_list_item"><img class="where_list_item_img" src="i/img/003-park.png" alt="park">I ein park</li>
+        <li class="where_list_item"><img class="where_list_item_img" src="i/img/004-game.png" alt="barnehage">I ein
+          barnehage/skule</li>
+        <li class="where_list_item"><img class="where_list_item_img" src="i/img/005-playground.png"
+            alt="aktivitetssenter">I eit barne- eller aktivitetssenter</li>
+        <li class="where_list_item"><img class="where_list_item_img" src="i/img/006-restaurant.png" alt="restaurant">På
+          ein kafé/restaurant</li>
+      </ul>
+    </div>
+
+    <div class="for-image"><img class="for-image_img" src="i/img/kds.jpg" alt="kids"></div>
   </div>
 
 
