--- a/src/index.html
+++ b/src/index.html
@@ -376,112 +376,22 @@
   </div>
 
   <!-- --FORM -->
-  <!-- <form
-    action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSd_9TAXbOIDoEEDAuM4GxgqUrZ1fJa7_fIehPJRGsGpImtpAg/formResponse"
-    class="form">
-    <h2>Bursdagen og Festen med TheFest.no</h2>
-    <ul>
-      <li> <label for="navn">Navn</label>
-        <input id="navn" type="text" name="entry.1609125562">
-      </li>
-      <li> <label for="tlf">Telefonnummer</label>
-        <input id="tlf" type="text" name="entry.1192627827">
-      </li>
-      <li> <label for="date">Festdato</label>
-        <input id="date" type="date" name="entry.847646232">
-      </li>
-      <li>
-        <p>Varigheten av feiringen</p>
-        <input id="halv" type="radio" name="entry.1223766670"><label for="halv">30 min</label>
-        <input id="tima" type="radio" name="entry.1223766670"><label for="tima">1 tima</label>
-        <input id="to" type="radio" name="entry.1223766670"><label for="to">2 timer</label>
-        <label for="other-feiringen">Andre</label><input id="other-feiringen" type="text"
-          name="entry.1223766670.other_option_response">
-      </li>
-      <li> <label for="antall">Antall barn</label>
-        <input id="antall" type="text" name="entry.2100119552">
-      </li>
-      <li>
-        <p>Alder på ferie deltakere</p>
-        <input id="null" type="checkbox" name="entry.1523447651"><label for="null">0-2</label>
-        <input id="tre" type="checkbox" name="entry.1523447651"><label for="tre">3-5</label>
-        <input id="fem" type="checkbox" name="entry.1523447651"><label for="fem">5-7</label>
-        <input id="eight" type="checkbox" name="entry.1523447651"><label for="eight">8-11</label>
-        <input id="tolv" type="checkbox" name="entry.1523447651"><label for="tolv">12-16</label>
-        <input id="vaksne" type="checkbox" name="entry.1523447651"><label for="vaksne">17-30</label>
-        <input id="vaksne_2" type="checkbox" name="entry.1523447651"><label for="vaksne_2">30+</label>
-      </li>
-      <li>
-        <p>Sted</p>
-        <input id="hus" type="radio" name="entry.1787740268"><label for="hus">Hus</label>
-        <input id="leilighet" type="radio" name="entry.1787740268"><label for="leilighet">Leilighet</label>
-        <input id="gym" type="radio" name="entry.1787740268"><label for="gym">Gym</label>
-        <input id="gaten" type="radio" name="entry.1787740268"><label for="gaten">På gaten</label>
-        <label for="other-sted">Andre</label><input id="other-sted" type="text"
-          name="entry.1787740268.other_option_response">
-      </li>
-      <li> <label for="adresse">Adresse til arrangementet</label>
-        <input id="adresse" type="text" name="entry.1632829884">
-      </li>
-      <li>
-        <p>Type feiring</p>
-        <input id="bursdag" type="radio" name="entry.85672004"><label for="bursdag">Bursdag</label>
-        <input id="jubileum" type="radio" name="entry.85672004"><label for="jubileum">Jubileum</label>
-        <input id="festival" type="radio" name="entry.85672004"><label for="festival">Festival</label>
-        <label for="other-type">Andre</label><input id="other-type" type="text"
-          name="entry.85672004.other_option_response">
-      </li>
-      <li>
-        <p>Språk</p>
-        <input id="nor" type="checkbox" name="entry.1903968290"><label for="nor">Norsk</label>
-        <input id="eng" type="checkbox" name="entry.1903968290"><label for="eng">Engelsk</label>
-        <input id="ukr" type="checkbox" name="entry.1903968290"><label for="ukr">Ukrainsk</label>
-        <input id="rus" type="checkbox" name="entry.1903968290"><label for="rus">Russisk</label>
-        <label for="other-språk">Andre</label><input id="other-språk" type="text"
-          name="entry.1903968290.other_option_response">
-      </li>
+  <div class="form">
+    <img class="form_img-1500" src="i/img/form-phone.png" alt="tlf">
+    <h2 class="form_title">Bestill ferien akkurat nå - kontakt oss på nummer:</h2>
+    <div class="form_for-1200">
+      <div class="form_for-1200_text">
+        <p class="form_num">+47 967 52 008</p>
+        <p class="form_text">eller legg igjen en forespørsel</p>
 
-      <li>
-        <p>Karakterene</p>
-        <img src="i/img/ex.png" alt="">
-        <input id="kar-1" type="checkbox" name="entry.1374765904"><label for="kar-1">Хаги Ваги</label>
-        <img src="i/img/ex.png" alt="">
-        <input id="kar-2" type="checkbox" name="entry.1374765904"><label for="kar-2">Кисси Мисси</label>
-        <img src="i/img/ex.png" alt="">
-        <input id="kar-3" type="checkbox" name="entry.1374765904"><label for="kar-3">Сиренеголовый</label>
-        <img src="i/img/ex.png" alt="">
-        <input id="kar-4" type="checkbox" name="entry.1374765904"><label for="kar-4">Единорожка</label>
-        <img src="i/img/ex.png" alt="">
-        <input id="kar-5" type="checkbox" name="entry.1374765904"><label for="kar-5">Спайдермен</label>
-        <img src="i/img/ex.png" alt="">
-        <input id="kar-6" type="checkbox" name="entry.1374765904"><label for="kar-6">Капитан Сабольтан</label>
-        <img src="i/img/ex.png" alt="">
-        <input id="kar-7" type="checkbox" name="entry.1374765904"><label for="kar-7">Paw Patrol (Маршал)</label>
-        <img src="i/img/ex.png" alt="">
-        <input id="kar-8" type="checkbox" name="entry.1374765904"><label for="kar-8">Paw Patrol (Скай)</label>
-        <img src="i/img/ex.png" alt="">
-        <input id="kar-9" type="checkbox" name="entry.1374765904"><label for="kar-9">Wednesday</label>
-        <img src="i/img/ex.png" alt="">
-        <input id="kar-10" type="checkbox" name="entry.1374765904"><label for="kar-10">Wednesday Ларч</label>
-        <img src="i/img/ex.png" alt="">
-        <input id="kar-11" type="checkbox" name="entry.1374765904"><label for="kar-11">Крижане серце (Эльза)</label>
-        <img src="i/img/ex.png" alt="">
-        <input id="kar-12" type="checkbox" name="entry.1374765904"><label for="kar-12">Крижане серце (Олаф)</label>
-        <img src="i/img/ex.png" alt="">
-        <input id="kar-13" type="checkbox" name="entry.1374765904"><label for="kar-13">Бетмен</label>
-        <label for="other-språk">Andre</label><input id="other-språk" type="text"
-          name="entry.1374765904.other_option_response">
-      </li>
-      <li> <label for="kommentarer">Kommentarer</label>
-        <input id="kommentarer" type="text" name="entry.930889596">
-      </li>
-      <input type="submit" value="Отправить заявку">
-    </ul>
-  </form> -->
-  <!-- <div>
-    <iframe class="form_main"
-      src="https://docs.google.com/forms/d/e/1FAIpQLSdXRN3bQq_HX5X_XzrWIa1Zu3YaxEc_ldnqXELnVNpZIJH_gA/viewform?embedded=true">Загрузка…</iframe>
-  </div> -->
+
+        <form action="page/new.html" target="_blank">
+          <button class="form_btn">Send en forespørsel</button>
+      </div>
+
+      <div><img class="form_img" src="i/img/form-phone.png" alt="tlf"></div>
+    </div>
+  </div>
 
 
 
