--- a/src/index.html
+++ b/src/index.html
@@ -404,24 +404,24 @@
       ferien vår går over</h2>
     <div class="container">
       <div id="slider-main" class="gallery__slider slider">
-        <div class="slider__item gallery__slider__img" data-fancybox="gallery" data-src="./i/img/party/1.jpg">
-          <img class="slider__img gallery__slider__img_root" src="./i/img/party/1.jpg">
+        <div class="slider__item gallery__slider__img" data-fancybox="gallery" data-src="i/img/party/1.jpg">
+          <img class="slider__img gallery__slider__img_root" src="i/img/party/1.jpg">
         </div>
-        <div class="slider__item gallery__slider__img" data-fancybox="gallery" data-src="./i/img/party/2.jpg">
+        <div class="slider__item gallery__slider__img" data-fancybox="gallery" data-src="i/img/party/2.jpg">
 
-          <img class="slider__img gallery__slider__img_root" src="./i/img/party/2.jpg">
+          <img class="slider__img gallery__slider__img_root" src="i/img/party/2.jpg">
         </div>
-        <div class="slider__item gallery__slider__img" data-fancybox="gallery" data-src="./i/img/party/3.jpg">
-          <img class="slider__img gallery__slider__img_root" src="./i/img/party/3.jpg">
+        <div class="slider__item gallery__slider__img" data-fancybox="gallery" data-src="i/img/party/3.jpg">
+          <img class="slider__img gallery__slider__img_root" src="i/img/party/3.jpg">
         </div>
-        <div class="slider__item gallery__slider__img" data-fancybox="gallery" data-src="./i/img/party/4.jpg.jpg">
-          <img class="slider__img gallery__slider__img_root" src="./i/img/party/4.jpg">
+        <div class="slider__item gallery__slider__img" data-fancybox="gallery" data-src="i/img/party/4.jpg">
+          <img class="slider__img gallery__slider__img_root" src="i/img/party/4.jpg">
         </div>
-        <div class="slider__item gallery__slider__img" data-fancybox="gallery" data-src="./i/img/party/5.jpg.jpg">
-          <img class="slider__img gallery__slider__img_root" src="./i/img/party/5.jpg">
+        <div class="slider__item gallery__slider__img" data-fancybox="gallery" data-src="i/img/party/5.jpg">
+          <img class="slider__img gallery__slider__img_root" src="i/img/party/5.jpg">
         </div>
-        <div class="slider__item gallery__slider__img" data-fancybox="gallery" data-src="./i/img/party/6.jpg.jpg">
-          <img class="slider__img gallery__slider__img_root" src="./i/img/party/6.jpg">
+        <div class="slider__item gallery__slider__img" data-fancybox="gallery" data-src="i/img/party/6.jpg">
+          <img class="slider__img gallery__slider__img_root" src="i/img/party/6.jpg">
         </div>
 
 
