--- a/src/index.html
+++ b/src/index.html
@@ -140,7 +140,15 @@
         <div class="tilleg_item-bg">
           <p>Barnefest fotograf</p>
         </div>
-        <img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+        <!-- -Всплывающий блок -->
+        <div class="tilleg-help-block">
+          <div class="tilleg_item-description">
+            <p>Vår fotograf kan fange viktige øyeblikk og følelsar hjå barn og deira foreldre, og lage kvalitetsrike og
+              minneverdige fotografi.</p>
+            <p class="tilleg_item-description_price">500 kr pr 1 time
+            </p>
+          </div><img class="tilleg_item-img" src="./i/img/kids.jpg" alt="#">
+        </div>
       </li>
       <li class="tilleg_list_frame ts">
         <div class="tilleg_item-bg tilleg_item-bg_2">
